@@ -53,7 +53,7 @@ NOTE: Una volta abilitato il backup, ogni cluster di tool ONTAP necessita di alt
 | Storage, host e applicazioni | Requisiti di versione 
 
 
-| ONTAP | 9.15.1, 9.16.0, 9.16.1, 9.17.0 e 9.17.1 
+| ONTAP | 9.15.1, 9.16.1, e 9.17.0 
 
 
 | Gli strumenti ONTAP supportavano gli host ESXi | da 7.0.3 in poi 
